nginxtutor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxtutor-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginxtutor-deployment
  template:
    metadata:
      labels:
        app: nginxtutor-deployment
    spec:
      containers:
        - name: nginxtutor-deployment
        image: nginx
        resources:
          limits:
            memory: 
            cpu: 
        ports:
        - containerPort: 80
