nginxtutor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxtutor-service
spec:
  type: NodePort
  selector:
    app: nginxtutor-service
  ports:
  - port: 80
    targetPort: 31200
