volume.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  containers:
    - name: my-nginx-volume
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pvc-storage
  volumes:
    - name: pvc-storage
      persistentVolumeClaim:
        claimName: my-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-app
spec:
  type: loadBalancer
  selector:
    app: nginx-app
  ports:
      protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 32010
